[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"
authors = ["Nicholas Steicke <67732+narthollis@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
array2d = "0.2.1"
